KeePassDX(2.8)
 * Fix TOTP period (> 60s)
 * Fix searching in recycle bin
 * Improve action tasks
 * Fix minor issues

KeePassDX(2.7)
 * Add blocklists for autofill
 * Add autofill compatibility mode (usefull for Browser not compatible)
 * Upgrade autofill recognition algorithm
 * Setting to search through web subdomains
 * Refactoring selection mode

KeePassDX(2.6)
 * Share a web domain to automatically search for an entry
 * Default group icon for a new entry
 * Better autofill recognition
 * Fix entry not visually deleted in search
 * Fix hanged loading dialog
 * Fix auto open biometric prompt if comes from background
 * Minor fixes

KeePassDX(2.5)
 * First stable version of KeePassDX
 * Fork completely rewritten from the KeePassDroid project
 * Fix small issues from the last Release Candidate

KeePassDX(2.5RC2)
 * Replacement of Spongy Castle by Bouncy Castle
 * Update Autofill compatibility
 * Fix Magikeyboard "Go" action
 * Fix KeeWeb database opening
 * Fix default username
 * Fix themes
 * Fix small issues

KeePassDX(2.5RC1)
 * Add write permission to keep compatibility with old file managers
 * Fix autofill for apps
 * Auto search for autofill
 * New keyfile input
 * Icon to hide keyfile input
 * New lock button
 * Setting to hide lock button in user interface
 * Clickable links in notes
 * Fix autofill for key-value pairs

KeePassDX(2.5beta30)
 * Fix Lock after screen off (wait 1.5 seconds)
 * Upgrade autofill algorithm
 * Fix ANR during file verifications

KeePassDX(2.5beta29)
 * Upgrade autofill algorithm
 * Delete registered KeyFile after save new credentials
 * Fix title and username entry view refresh after an update
 * Fix database lock request (open notification always active)
 * Allow empty title in entries
 * Add expiration datetime

KeePassDX(2.5beta28)
 * Fix read only database
 * Upgrade to Android SDK 29

KeePassDX (2.5beta27)
 * New setting to hide broken links
 * Show URL when title is empty