@@ -67,4 +67,18 @@
             android:defaultValue="@bool/keyboard_key_sound_default"
             android:title="@string/keyboard_key_sound_title" />
     </PreferenceCategory>
+    <PreferenceCategory
+        android:title="@string/keyboard_change">
+        <SwitchPreference
+            android:key="@string/keyboard_previous_database_credentials_key"
+            android:title="@string/keyboard_previous_database_credentials_title"
+            android:summary="@string/keyboard_previous_database_credentials_summary"
+            android:defaultValue="@bool/keyboard_previous_database_credentials_default"/>
+        <SwitchPreference
+            android:key="@string/keyboard_previous_fill_in_key"
+            android:title="@string/keyboard_previous_fill_in_title"
+            android:summary="@string/keyboard_previous_fill_in_summary"
+            android:defaultValue="@bool/keyboard_previous_fill_in_default"
+            android:dependency="@string/keyboard_auto_go_action_key"/>
+    </PreferenceCategory>
 </PreferenceScreen>
