@@ -1,5 +1,6 @@
  * Fix TOTP period (> 60s)
  * Fix searching in recycle bin
+ * Settings to back to the previous keyboard during database credentials and after form filling
  * Improving action tasks
  * Fix minor issues
 
